--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -115,14 +115,14 @@ jobs:
       - name: Test (MacOS)
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
-          ctest --preset x86_64-apple-darwin-${{ matrix.build }}
+          ctest --preset x86_64-apple-darwin-${{ matrix.build }}-test
 
       - name: Test (Ubuntu)
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
-          ctest --preset x86_64-unknown-linux-gcc-${{ matrix.build }}
+          ctest --preset x86_64-unknown-linux-gcc-${{ matrix.build }}-test
 
       - name: Test (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          ctest --preset x86_64-intel_pc-windows-msvc-${{ matrix.build }}
+          ctest --preset x86_64-intel_pc-windows-msvc-${{ matrix.build }}-test
