--- a/apps/half-life-2/CMakeLists.txt
+++ b/apps/half-life-2/CMakeLists.txt
@@ -37,6 +37,7 @@ endif()
 set(WB_HALF_LIFE2_RUNTIME_DEPS
   # Should be first as linker requires it.
   mimalloc
+  marl
   g3log
   wb::whitebox-base
   wb::whitebox-boot-manager
