--- a/boot-manager/CMakeLists.txt
+++ b/boot-manager/CMakeLists.txt
@@ -21,7 +21,7 @@ set(WB_BOOTMGR_LINK_DEPS
   wb::whitebox-base
   wb::whitebox-ui)
 if (WB_OS_WIN)
-  list(APPEND WB_BOOTMGR_LINK_DEPS "Winmm")
+  list(APPEND WB_BOOTMGR_LINK_DEPS mimalloc-redirect Winmm)
 elseif (WB_OS_LINUX)
   # dlopen, shm_open, filesystem.
   list(APPEND WB_BOOTMGR_LINK_DEPS "dl;rt;stdc++fs")
@@ -29,15 +29,6 @@ elseif (WB_OS_MACOS)
   # dlopen, shm_open, filesystem.
   list(APPEND WB_BOOTMGR_LINK_DEPS "dl;rt;c++fs")
 endif()
-
-set(WB_BOOTMGR_RUNTIME_DEPS
-  # Should be first as linker requires it.
-  mimalloc
-  marl
-  g3log
-  wb::whitebox-base
-  wb::whitebox-kernel
-  wb::whitebox-ui)
 
 wb_cxx_shared_library(
   TARGET        ${WB_BOOTMGR_TARGET_NAME}
@@ -48,5 +39,4 @@ wb_cxx_shared_library(
   CXX_DEFS      WB_BOOT_MANAGER_DLL=1
   LINK_OPTS     ${WB_BOOTMGR_LINK_OPTIONS}
   LINK_DEPS     ${WB_BOOTMGR_LINK_DEPS}
-  RUNTIME_DEPS  ${WB_BOOTMGR_RUNTIME_DEPS}
 )
