--- a/hal/drivers/cpu/CMakeLists.txt
+++ b/hal/drivers/cpu/CMakeLists.txt
@@ -15,10 +15,10 @@ set(WB_HAL_CPU_DRIVER_LINK_DEPS
   # Should be first as linker requires it.
   mimalloc
   g3log)
-set(WB_HAL_CPU_DRIVER_RUNTIME_DEPS
-  # Should be first as linker requires it.
-  mimalloc
-  g3log)
+
+if (WB_OS_WIN)
+  list(APPEND WB_HAL_CPU_DRIVER_LINK_DEPS mimalloc-redirect)
+endif()
 
 wb_cxx_shared_library(
   TARGET        ${WB_HAL_CPU_DRIVER_TARGET_NAME}
@@ -29,5 +29,4 @@ wb_cxx_shared_library(
   CXX_DEFS      WB_HAL_CPU_DRIVER_DLL=1
   LINK_OPTS     ${WB_HAL_CPU_DRIVER_LINK_OPTIONS}
   LINK_DEPS     ${WB_HAL_CPU_DRIVER_LINK_DEPS}
-  RUNTIME_DEPS  ${WB_HAL_CPU_DRIVER_RUNTIME_DEPS}
 )
