--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false
       matrix:
         build: [ debug, release ]
-        os: [ macos-15, ubuntu-24.04, windows-latest ]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
 
     runs-on: ${{ matrix.os }}
 
@@ -42,7 +42,7 @@ jobs:
           submodules: recursive
 
       - name: Install dependencies (Ubuntu)
-        if: ${{ matrix.os == 'ubuntu-24.04' }}
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -98,13 +98,13 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1
 
       - name: Build (MacOS)
-        if: ${{ matrix.os == 'macos-15' }}
+        if: ${{ matrix.os == 'macos-latest' }}
         run: |
           cmake --preset x86_64-apple-darwin-${{ matrix.build }}
           cmake --build --preset x86_64-apple-darwin-${{ matrix.build }}
 
       - name: Build (Ubuntu)
-        if: ${{ matrix.os == 'ubuntu-24.04' }}
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           cmake --preset x86_64-unknown-linux-gcc-${{ matrix.build }}
           cmake --build --preset x86_64-unknown-linux-gcc-${{ matrix.build }}
@@ -116,12 +116,12 @@ jobs:
           cmake --build --preset x86_64-pc-windows-msvc-${{ matrix.build }}
 
       - name: Test (MacOS)
-        if: ${{ matrix.os == 'macos-15' }}
+        if: ${{ matrix.os == 'macos-latest' }}
         run: |
           ctest --preset x86_64-apple-darwin-${{ matrix.build }}-test
 
       - name: Test (Ubuntu)
-        if: ${{ matrix.os == 'ubuntu-24.04' }}
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           ctest --preset x86_64-unknown-linux-gcc-${{ matrix.build }}-test
 
