[ci] Do not run CI when THIRD_PARTY licenses updated

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,12 +10,14 @@ on:
   push:
     branches: [ master ]
     paths-ignore:
+      - THIRD_PARTY
       - '**/*.md'
       - 'assets/**'
 
   pull_request:
     branches: [ master ]
     paths-ignore:
+      - THIRD_PARTY
       - '**/*.md'
       - 'assets/**'
 
