[cmake] Correctly choose build type and allow override it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,12 @@ include(wb_common_functions)
 include(wb_build_functions)
 wb_check_platform_requirements(${PACKAGE_NAME})
 
+# Default build type is Release unless overridden.
+# On Windows default is Debug, so need to unify.
+# See https://discourse.cmake.org/t/how-to-deal-with-ninja-setting-cmake-build-type-to-debug/281/3
+set(CMAKE_BUILD_TYPE "Release" CACHE STRING
+  "Choose the type of build.")
+
 set(WB_BUILD_TYPE "${CMAKE_BUILD_TYPE}" CACHE STRING
   "CMake build type used to build ${PACKAGE_NAME}.")
 set(WB_CMAKE_GENERATOR "${CMAKE_GENERATOR}" CACHE STRING
