--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install dependencies (Ubuntu)
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
+          sudo rm /var/lib/man-db/auto-update
           sudo apt-get update
           sudo apt-get install -y \
           build-essential \
